@@ -1,4 +1,5 @@
 =head1 Changes in DBD-Oracle 1.22(svn rev xxxx)  2008 
+  Changed the way Ping works rather than using prepare and execute it now makes a single round trip call to DB by John Scoles
   Fix for rt.cpan.org Ticket #=37501 fail HP-UX Itanium 11.31 makefile also added the OS and version to the output of the Makefile.PL for easier debugging. from John Scoles and Rich Roemer 
   Added a number of internal functions for decoding OCI debug values from John Scoles
   Fix for  hpux 11.23 linker error unrecognized argument on the Makefile from someone on CPAN forum
